# advent_of_code_2024

./: Cargo.toml  README.md  justfile
day_10a/: Cargo.toml  justfile
day_10a/src/: main.rs
day_10b/: Cargo.toml  justfile
day_10b/src/: main.rs
day_11a/: Cargo.toml  justfile
day_11a/src/: main.rs
day_11b/: Cargo.toml  justfile
day_11b/src/: main.rs
day_12a/: Cargo.toml  justfile  smaller_input
day_12a/src/: main.rs
day_12b/: Cargo.toml  justfile
day_12b/src/: main.rs
day_13a/: Cargo.toml  justfile
day_13a/src/: main.rs
day_13b/: Cargo.toml  justfile
day_13b/src/: main.rs
day_14a/: Cargo.toml  justfile
day_14a/src/: main.rs
day_14b/: Cargo.toml  justfile
day_14b/src/: main.rs
day_15a/: Cargo.toml  justfile
day_15a/src/: main.rs
day_1a/: Cargo.toml  justfile
day_1a/src/: main.rs
day_1b/: Cargo.toml  justfile
day_1b/src/: main.rs
day_2a/: Cargo.toml  justfile
day_2b/: Cargo.toml  justfile
day_2b/src/: main.rs
day_3a/: Cargo.toml  justfile
day_3b/: Cargo.toml  justfile
day_3b/src/: main.rs
day_4a/: Cargo.toml  justfile
day_4a/src/: main.rs
day_4b/: Cargo.toml  justfile
day_4b/src/: main.rs
day_5a/: Cargo.toml  justfile
day_5a/src/: main.rs
day_5b/: Cargo.toml  justfile
day_5b/src/: main.rs
day_6a/: Cargo.toml  justfile
day_6a/src/: main.rs
day_6b/: Cargo.toml  justfile  test.py  test_input
day_7a/: Cargo.toml  justfile
day_7b/: Cargo.toml  justfile
day_8a/: Cargo.toml  justfile
day_8b/: Cargo.toml  justfile
day_9a/: Cargo.toml  justfile
day_9b/: Cargo.toml  justfile
(+7 files in other folders)
