[workspace]

resolver = "2"

members = [
    "day_1a",
    "day_1b",
    "day_2a",
    "day_2b",
    "day_3a",
    "day_3b",
    "day_4a",
    "day_4b",
    "day_5a",
    "day_5b",
    "day_6a",
    "day_6b",
    "day_7a",
    "day_7b",
    "day_8a",
    "day_8b",
    "day_9a",
    "day_9b",
    "day_10a",
    "day_10b",
    "day_11a",
    "day_11b",
    "day_12a",
    "day_12b",
    "day_13a",
    "day_13b",
    "day_14a",
    "day_14b",
]
